# crypto-keystore-rs

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md
.claude/: settings.local.json
.config/: nextest.toml
.github/workflows/: ci.yml  security-audit.yml
examples/: ethereum_basic.rs  solana_basic.rs
src/: crypto_config.rs  error.rs  kdf_config.rs  keystore.rs  lib.rs
src/chains/: ethereum.rs  macros.rs  mod.rs  solana.rs
tests/: api_coverage.rs  compatibility.rs  concurrency.rs  crypto_vectors.rs  error_cases.rs  ethereum.rs  property_tests.rs  solana.rs
tests/common/: mod.rs
tests/fixtures/: ethereum_v4_pbkdf2.json  ethereum_v4_scrypt.json  solana_v4.json
